namespaces/live.cloud-platform.service.justice.gov.uk/dedsai-intel-sanitise-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "dedsai-intel-sanitise-api-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "intel-app-maintenance"
    cloud-platform.justice.gov.uk/application: "API to sanitise intelligence reports"
    cloud-platform.justice.gov.uk/owner: "dedsai: prison-data-science@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/intelligence-sanitisation-api"
    cloud-platform.justice.gov.uk/team-name: "prisons-intel-ds"
    cloud-platform.justice.gov.uk/review-after: ""
